Bug 168998 - Juk History Doesn't Work Correctly
Summary: Juk History Doesn't Work Correctly
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Pyne
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-12 22:15 UTC by Jay LaCroix
Modified: 2010-06-11 04:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.4.5
Sentry Crash Report:


Attachments
Screenshot 1 (51.71 KB, image/jpeg)
2008-08-12 22:16 UTC, Jay LaCroix
Details
I wrote on this image to show what I'm talking about. (62.79 KB, image/jpeg)
2008-08-12 22:20 UTC, Jay LaCroix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jay LaCroix 2008-08-12 22:15:37 UTC
Version:            (using KDE 4.1.0)
Installed from:    Ubuntu Packages
OS:                Linux

Ever since I upgraded to KDE 4.1, the history function of Juk no longer works correctly.

For example, I played about five songs. The history function on the main window to the right of the song name doesn't show that I've played any songs. (See screenshot that I will attach).

Furthermore, I added the History section to the left sidebar, and it's showing the wrong data in the wrong fields. (I can assure you that the music files show up perfect in all other media players and I did check the ID3 tags).

The screenshot that I will attach shows the history section of the main window not showing the songs I've played, and it also shows in the History section that the date is under the track name, the song title is under artist, and the name of the artist is under album.

I am not getting any crashes, just a few weird errors. 

I love Juk alot, probably more than Amarok right now due to its simplicity. I would give anything if I knew C++ enough to send you guys patches and do my part. :(
Comment 1 Jay LaCroix 2008-08-12 22:16:10 UTC
Created attachment 26810 [details]
Screenshot 1
Comment 2 Jay LaCroix 2008-08-12 22:20:33 UTC
Created attachment 26811 [details]
I wrote on this image to show what I'm talking about.
Comment 3 Jay LaCroix 2008-09-03 02:20:52 UTC
This is still a problem in KDE 4.1.1.
Comment 4 Guido Winkelmann 2009-10-12 03:36:48 UTC
I can confirm this bug is still present, exactly as described, in KDE 4.3.2 under Gentoo.
Comment 5 Michael Pyne 2010-05-10 06:10:30 UTC
I've noticed it since KDE 4.0 but haven't been able to fix it. :-/
Comment 6 Michael Pyne 2010-06-11 03:38:55 UTC
SVN commit 1136884 by mpyne:

Make the history playlist work again.

In the great PlayerManager de-singletonizing of KDE 4.1 I managed to not port over the
Qt signal for the playlist splitter that was emitted on track change, which meant the
history playlist wouldn't receive it. I've reattached the signal to the history playlist
which means it works[1] again.

[1] It's still as broken as it was in KDE 4.0, which means that the "Date" column doesn't
show up, and all the other columns are shifted over by one to compensate.

BUG: 168998
FIXED-IN: 4.5


 M  +2 -6      playlistbox.cpp  
 M  +1 -1      playlistbox.h  
 M  +5 -1      playlistcollection.cpp  
 M  +3 -1      playlistcollection.h  
 M  +1 -4      playlistsplitter.cpp  
 M  +0 -2      playlistsplitter.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1136884
Comment 7 Michael Pyne 2010-06-11 04:33:18 UTC
SVN commit 1136894 by mpyne:

Backport bugfix for bug 168998 (JuK history doesn't work correctly) to KDE SC 4.4.5.

This includes two fixes in trunk, an initial fix making the history playlist get tracks
added again, and another fix that re-enables the custom column the history playlist was
supposed to have.

CCBUG:168998
FIXED-IN:4.4.5


 M  +4 -12     historyplaylist.cpp  
 M  +0 -3      historyplaylist.h  
 M  +6 -1      playlist.cpp  
 M  +6 -1      playlist.h  
 M  +2 -6      playlistbox.cpp  
 M  +1 -1      playlistbox.h  
 M  +5 -1      playlistcollection.cpp  
 M  +3 -1      playlistcollection.h  
 M  +1 -4      playlistsplitter.cpp  
 M  +0 -2      playlistsplitter.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1136894
Comment 8 Michael Pyne 2010-06-11 04:35:36 UTC
Update fixed in tag.